--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://tbobin.github.io/bobikon/"
+baseURL = "https://bobikon.com"
 languageCode = "de-de"
 title = "Willkomen bei Bobikon"
 theme = "hugo-creative-portfolio-theme"
@@ -25,7 +25,7 @@ theme = "hugo-creative-portfolio-theme"
      # - send a dummy email yourself to confirm your account
      # - click the confirm link in the email from www.formspree.io
      # - you're done. Happy mailing!
-  email = "you@yoursite.com"
+  email = "bobikon2020@gmail.com"
 
     # Optional Matomo analytics (formerly piwik)
       # [params.analytics.matomo]
